[#X] Yangxi - Scrollbar is not displayed correctly, in PREVIOUS DELIVERIES section

--- a/eums/client/less/general.less
+++ b/eums/client/less/general.less
@@ -113,9 +113,8 @@ h4.page-header {
   min-height: 50px;
   top: 85px;
   z-index: 1020;
-  background-color: #fff;
   width: 100%;
-  opacity: 0.9;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 .eums.page-header.fixed {
